--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Ajoutez le lien CDN vers Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-typography">
   <app-root>
   </app-root>
 </body>
