PDF Journal+ plusieurs tàches

--- a/src/assets/demande_stage.html
+++ b/src/assets/demande_stage.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="header">
-        <img src="assets/images/esprit.PNG" alt="Logo de l'établissement" class="logo"></img>
+        <p> <img src="assets/images/esprit.PNG" alt="Logo de l'établissement" class="logo"> </p>
 
         <p class="align-right"></p> 
     </div>
@@ -21,7 +21,8 @@
         <p>Madame, Monsieur,</p>
 
         <p>L’Ecole Supérieure Privée d’Ingénierie et de Technologies, ESPRIT SA, est un établissement 
-           d’enseignement supérieur privé ayant pour objet principal,la formation d’ingénieurs 
+           d’enseignement supérieur privé ayant pour objet principal , la</p> 
+        <p>formation d’ingénieurs 
            dans les domaines des technologies de 
            l’information et de la communication. </p>
 
@@ -42,7 +43,7 @@
     </div>
 
     <div class="signature">
-        <img src="assets/images/esprit2.PNG" alt="Signature de l'établissement" class="signature-image"></img>
+       <p><img src="assets/images/esprit2.PNG" alt="Signature de l'établissement" class="signature-image"> </p>
 
         <p>© 2021 Esprit, Inc. · Privacy · Terms</p>
     </div>
